--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="player-content">
           <div id="player-album-art">
             <img
-              src="https://cdn.freecodecamp.org/curriculum/js-music-player/quincy-larson-album-art.jpg"
+              src="https://www.freepnglogos.com/uploads/spotify-logo-png/spotify-icon-logo-transparent-vector-1.png"
               alt="song cover art"
             />
           </div>
